[project]
name = "balancing-the-scales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "ANN",
  "F",
  "E",
  "W",
  "I",
  "B",
  "UP",
  "S",
  "SIM",
  "RET",
  "TRY",
]
per-file-ignores = { "*.ipynb" = ["F401"] }

[tool.ruff.lint.pydocstyle]
convention = "google"
